# MEWS

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE.md  LICENSE.txt  README.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_docs.yml  github-actions-demo.yml  pylint.yml  pytest.yml  python-publish.yml  readthedocs.yml
ci/: install_python.ps1  requirements-py36.yml  requirements-py37.yml  requirements-py38.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  license.rst  mews.cython.markov.rst  mews.data_requests.CMIP6.rst  mews.epw.epw.rst  mews.epw.rst  mews.events.extreme_temperature_waves.rst  mews.graphics.plotting2D.rst  mews.stats.extreme.rst  mews.stats.markov.rst  mews.weather.climate.rst  mews.weather.doe2weather.rst  overview.rst
examples/: CMIP_data.py  STEPS_TO_RUN_MEWS.txt  albuquerque_heat_wave_analysis.py  albuquerque_heat_wave_analysis_global_simbuild_paper.py  convergence_study_new_use_case.py  denver_test_case_heat_wave_analysis.py  find_worst_case_file.py  heat_waves.py  heat_waves_doe2.py  houston_example.py  houston_generate_files_from_solution_example.py  houston_heat_wave_analysis.py  hurricane_analysis_not_part_of_MEWS_but_for_a_future_hurricane_class.py  mews_output_analysis.R  multiple_cities_test.py  run_albuquerque_study.bat  run_albuquerque_study_2035.bat  run_mews_extreme_temperature_example_v_1_1.py  run_mews_extreme_temperature_example_v_1_1_2.py  run_mews_extreme_temperature_example_v_1_1_abq_for_maddie.py  run_mews_hawaii_optimize.py  study_results.pkl  verify_mews.py  verify_mews_2x.py  worcester_example.py  worcester_example_2x_iterations_in_step2.py  worcester_heat_wave_analysis.py  zip_mew_results.py
examples/example_data/: climate_zone_study_lat_lon.xlsx  data_prep.py  mews_run.dict  mews_run_abq_2035_2050.dict  mews_run_only1file.dict
examples/help_scripts/: find_worst_case_file.py  zip_mew_results.py
examples/mews_results/: USA_NM_Albuquerque.Intl.AP.723650_TMY3SSP5-8.5_2025_r0.epw  USA_NM_Albuquerque.Intl.AP.723650_TMY3SSP5-8.5_2025_r12.epw  USA_NM_Albuquerque.Intl.AP.723650_TMY3SSP5-8.5_2025_r14.epw  USA_NM_Albuquerque.Intl.AP.723650_TMY3SSP5-8.5_2025_r17.epw  USA_NM_Albuquerque.Intl.AP.723650_TMY3SSP5-8.5_2025_r18.epw  USA_NM_Albuquerque.Intl.AP.723650_TMY3SSP5-8.5_2025_r2.epw  USA_NM_Albuquerque.Intl.AP.723650_TMY3SSP5-8.5_2025_r20.epw  USA_NM_Albuquerque.Intl.AP.723650_TMY3SSP5-8.5_2025_r21.epw  USA_NM_Albuquerque.Intl.AP.723650_TMY3SSP5-8.5_2025_r26.epw  USA_NM_Albuquerque.Intl.AP.723650_TMY3SSP5-8.5_2025_r27.epw  USA_NM_Albuquerque.Intl.AP.723650_TMY3SSP5-8.5_2025_r28.epw  USA_NM_Albuquerque.Intl.AP.723650_TMY3SSP5-8.5_2025_r29.epw  USA_NM_Albuquerque.Intl.AP.723650_TMY3SSP5-8.5_2025_r30.epw  USA_NM_Albuquerque.Intl.AP.723650_TMY3SSP5-8.5_2025_r32.epw  (+221 more)
examples/old/: CMIP_data.py  (+24 more)
information/: 2021-Villa-MEWS_introductory_presentation_UUR_SAND2021-6836PE.pptx  ~$2021-Villa-MEWS_introductory_presentation_UUR_SAND2021-6836PE.pptx
mews/: __init__.py  run_energyplus.py  run_mews.py
mews.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_alter.py  test_climate.py  test_cmip6.py  test_epw.py  test_extreme.py  test_extreme_temperature_waves.py  test_markov.py  test_run_energyplus.py  test_solve.py  test_utilities.py
(+2954 files in other folders)
