[build-system]
requires = [
"numpy",
"cython",
"setuptools",
"pytest",
"wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "Multi-scenario extreme weather simulator (MEWS)"
version = "1.1.2b"
authors = [{name = "Daniel L. Villa", email = "dlvilla@sandia.gov"}]
maintainers = [{name = "Daniel L. Villa", email = "dlvilla@sandia.gov"}]
description = "Heat wave stochastic generator using CMIP6, NOAA, and IPCC information"
license = {text = "Revised BSD"}
dependencies = ["numpy", "pandas", "matplotlib","scipy","statsmodels",
                "openpyxl", "cython",
                "xarray[complete]"]
requires-python = ">= 3.8"
[project.urls]
Repository = "https://github.com/sandialabs/MEWS.git"